--- a/page1.html
+++ b/page1.html
@@ -4,6 +4,7 @@
     <title>Welcome to Page 1!</title>
   </head>
   <body>
-    <p>Hello Express!</p>
+    <p>Hello Express! Click below to go back to Home page.</p>
+    <a href = "http://localhost:1337"></a>
   </body>
 </html>
