--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
   </head>
   <body>
     <h1>Welcome!</h1>
-    <p>Hello Express! Click here to go to</p>
+    <p>Hello Express! Click here to go to <a href="http://localhost:1337/page1"></a></p>
   </body>
 </html>
