--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
   </head>
   <body>
     <h1>Welcome!</h1>
-    <p>Hello Express! Click here to go to <a href="./</p>
+    <p>Hello Express! Click here to go to <a href="./page1.html"></a></p>
   </body>
 </html>
