--- a/page1.html
+++ b/page1.html
@@ -4,6 +4,6 @@
     <title>Welcome to Page 1!</title>
   </head>
   <body>
-    <p>Hello Express! Click below to go back to Home page.</p>
+    <p>Hello Express! Click below to go back to <a href="/.index.html">Home page</a></p>
   </body>
 </html>
