--- a/page1.html
+++ b/page1.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>Welcome to Page 1!</title>
+    <h1>Welcome to Page 1!</h1>
   </head>
   <body>
     <p>Hello Express! Click below to go back to <a href="/.index.html">Home page</a></p>
