--- a/page1.html
+++ b/page1.html
@@ -1,9 +1,10 @@
 <!doctype html>
 <html>
   <head>
-    <h1>Welcome to Page 1!</h1>
+    <title>Page 1</title>
   </head>
   <body>
+    <h1>Welcome to Page 1!</h1>
     <p>Hello Express! Click below to go back to <a href="/.index.html">Home page</a></p>
   </body>
 </html>
