--- a/page1.html
+++ b/page1.html
@@ -5,6 +5,6 @@
   </head>
   <body>
     <h1>Welcome to Page 1!</h1>
-    <p>Hello Express! Click below to go back to <a href="./index.html">Home page</a></p>
+    <p>Hello Express! Click below to go back to <a href="/index">Home page</a></p>
   </body>
 </html>
